# ace-v1

./: .env.sample  .gitignore  README.md  pyproject.toml  run.py
agent/src/: config.py  environment.py  exceptions.py  logger.py  shopper.py  typedefs.py  types.py
agent/src/core/: mllm.py  tools.py
agent/tests/: test_langchain_agent.py
config/models/: claude-3.5-sonnet.yaml  claude-3.7-sonnet.yaml  claude-4-sonnet.yaml  gemini-2.0-flash.yaml  gemini-2.5-flash-preview.yaml  gemini-2.5-flash.yaml  gpt-4.1.yaml  gpt-4o.yaml
experiments/: __init__.py  config.py  data_loader.py  dataset_environment.py  engine_loader.py  filesystem_environment.py  results.py  server.py
experiments/runners/: __init__.py  simple_runtime.py
experiments/runners/batch_runtime/: __init__.py  runtime.py
experiments/runners/batch_runtime/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
experiments/runners/batch_runtime/services/: __init__.py  (+3 more)
experiments/runners/screenshot_runtime/: __init__.py  base.py  hf_hub_dataset.py  local_dataset.py
experiments/runners/services/: __init__.py  screenshot_validation.py  worker_service.py
experiments/tests/: __init__.py  test_anthropic_batch_provider.py  test_anthropic_batch_with_image.py  test_engine_loader.py  test_gemini_batch_provider.py
experiments/utils/: journey_iterator.py  screenshot_collector.py
sandbox/: __init__.py  app.py  pyproject.toml
sandbox/src/: state.py
sandbox/templates/: results.html  search.html
tests/mocks/: __init__.py  mock_mllm.py
tests/runners/: __init__.py  test_screenshot_runtime.py
